--- a/modules/ROOT/pages/samples/components/employee-control.adoc
+++ b/modules/ROOT/pages/samples/components/employee-control.adoc
@@ -10,17 +10,16 @@
 Дополнительная информация о разработке элементов управления приведена в разделе xref:solutions/control.adoc[Разработка элемента управления для Конструктора разметок].
 ====
 
-В данном примере будет разработан элемент управления (далее -- *Сотрудник с фотографией*) для выбора сотрудника из _Справочника сотрудников_. Реализуемый компонент в определенных сценариях может быть использован в карточек вместо стандартного элемента управления *Сотрудник*.
+В данном примере будет разработан элемент управления (далее -- `_Сотрудник с фотографией_`) для выбора сотрудника из _Справочника сотрудников_. Реализуемый компонент в определенных сценариях может быть использован в карточках вместо стандартного элемента управления `_Сотрудник_`.
 
-Определим возможности и ограничения элемента управления:
-
-* отображение ФИО (используемое отображаемое значение. определенное настройками _Справочника сотрудников_), должности, телефона и фотографии сотрудника без открытия его карточки;
-* возможность настройки элемента управления:
-** выбор подразделения, сотрудники которого отображаются в списке;
-** фильтр состояний -- должны отображаться только сотрудники с указанным состоянием ("Активен", "Уволен" и т.д.);
-** опция, при активации которой в списке будут отображаться только сотрудники с состоянием "Активен"; если активирована данная опция и установлен фильтр состояний, то последний имеет приоритет;
-* для отображения сотрудников используется выпадающий список (без дерева подчинения);
-* быстрый поиск отсутствует.
+.Определим возможности и ограничения элемента управления:
+* Отображение ФИО (используемое отображаемое значение. определенное настройками _Справочника сотрудников_), должности, телефона и фотографии сотрудника без открытия его карточки.
+* Возможность настройки элемента управления:
+** Выбор подразделения, сотрудники которого отображаются в списке;
+** Фильтр состояний -- должны отображаться только сотрудники с указанным состоянием ("Активен", "Уволен" и т.д.).
+** Опция, при активации которой в списке будут отображаться только сотрудники с состоянием "Активен"; если активирована данная опция и установлен фильтр состояний, то последний имеет приоритет.
+* Для отображения сотрудников используется выпадающий список (без дерева подчинения).
+* Быстрый поиск отсутствует.
 
 Элемент управления, который может быть использован в _Конструкторе разметок_, должен содержать три обязательных компонента:
 
