Мелкие правки опечаток

--- a/modules/ROOT/pages/CreateSnapIn_Control.adoc
+++ b/modules/ROOT/pages/CreateSnapIn_Control.adoc
@@ -8,7 +8,7 @@ image::ServerConsole.PNG[image]
 
 [NOTE]
 ====
-Для работы с карточками _учета сетевого оборудования_ требуется лицензионный ключ: введите в поле *Лицензионный ключ* значение "ЛИЦЕНЗИЯ".
+Для работы с карточками _учета сетевого оборудования_ требуется лицензионный ключ: введите в поле _Лицензионный ключ_ значение "ЛИЦЕНЗИЯ".
 ====
 
 Интерфейс управления для расширения *консоли настройки* -- это обычный WinForms элемент управления (типа System.Windows.Forms.UserControl), в котором реализован интерфейс IConsoleControl (сборка `DocsVision.Tools.ServerConsole.Interfaces.dll`).
