Работа с примерами, примеры использования API WF

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -299,7 +299,7 @@
 ***** xref:appendix/controls/obsolete/BoundTreeView.adoc[]
 ***** xref:appendix/controls/obsolete/WizardConrol.adoc[]
 * Сборник примеров
-** xref:samples/use-object-model.adoc[]
+** Использование объектной модели уровня бизнес-логики
 *** xref:samples/object-model/init-context.adoc[]
 *** xref:samples/object-model/card-xref-add.adoc[]
 *** xref:samples/object-model/change-card-state.adoc[]
@@ -308,7 +308,7 @@
 *** xref:samples/object-model/check-signature.adoc[]
 *** xref:samples/object-model/staff-sync-ad.adoc[]
 *** xref:samples/object-model/approval.adoc[]
-** xref:samples/use-api/base-api.adoc[]
+** Использование базового API
 *** xref:samples/use-api/create-view.adoc[]
 *** xref:samples/use-api/delayed-changes.adoc[]
 *** xref:samples/use-api/cursor-on-folder.adoc[]
@@ -319,16 +319,16 @@
 *** xref:samples/components/command-plugin.adoc[]
 *** xref:samples/components/resources-movement-card.adoc[]
 *** xref:samples/components/employee-control.adoc[]
-*** xref:samples/components/samples_container_createcomponents_propertypages.adoc[]
-** xref:samples/SM_Workflow_Cat.adoc[]
-*** xref:samples/SM_Workflow_1.adoc[]
-*** xref:samples/SM_Workflow_2.adoc[]
-*** xref:samples/SM_Workflow_3.adoc[]
-*** xref:samples/SM_Workflow_4.adoc[]
-*** xref:samples/SM_Workflow_5.adoc[]
-*** xref:samples/SM_Workflow_6.adoc[]
-*** xref:samples/SM_Workflow_7.adoc[]
-*** xref:samples/SM_Workflow_8.adoc[]
+*** xref:samples/components/properties-page.adoc[]
+** Примеры использования API Workflow
+*** xref:samples/workflow-api/SM_Workflow_1.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_2.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_3.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_4.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_5.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_6.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_7.adoc[]
+*** xref:samples/workflow-api/SM_Workflow_8.adoc[]
 ** xref:CreateSolution.adoc[]
 *** xref:Intro.adoc[]
 *** xref:CreateCardLib.adoc[]
