--- a/modules/ROOT/pages/appendix/SessionGetList.adoc
+++ b/modules/ROOT/pages/appendix/SessionGetList.adoc
@@ -26,7 +26,7 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Ses
 
 Параметры::
 baseName:::
-Название базы данных. Если не указана, возвращается список подключений к базе данных по-умолчанию.
+Название базы данных. Если не указана, возвращается список подключений к базе данных по умолчанию.
 
 == Ответ
 
