--- a/modules/ROOT/pages/appendix/webservice/server/SessionLogin.adoc
+++ b/modules/ROOT/pages/appendix/webservice/server/SessionLogin.adoc
@@ -25,7 +25,7 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Ses
 
 Параметры::
 baseName:::
-Название базы данных. Если не указана, использует база данных по-умолчанию
+Название базы данных. Если не указана, использует база данных по умолчанию
 sessionSettings:::
 Параметры сессии
 
