--- a/modules/ROOT/pages/appendix/webservice/server/SessionUpdateOfflineState.adoc
+++ b/modules/ROOT/pages/appendix/webservice/server/SessionUpdateOfflineState.adoc
@@ -27,7 +27,7 @@ SOAPAction: "http://schemas.docsvision.com/Platform/2009-02-03/StorageServer/Ses
 sessionId:::
 Идентификатор пользовательской сессии
 offline:::
-Если `true`, то сессия переводится в режим "Оффлайн", иначе в режим "Онлайн"
+Если `true`, то сессия переводится в режим "Офлайн", иначе в режим "Онлайн"
 
 == Ответ
 
