--- a/modules/ROOT/pages/samples/components/employee-control.adoc
+++ b/modules/ROOT/pages/samples/components/employee-control.adoc
@@ -245,16 +245,15 @@ public sealed class ExtensionPackage : ControlExtensionInfoPackage
 
 Чтобы реализовать в своем проекте такой компонент, достаточно создать новый класс и унаследовать его от типа `DocsVision.BackOffice.WinForms.Design.PropertySettingsForm`.
 
-В данном решении компонент для настройки элемента управления реализован в `StaffPropertySettingsForm`. В дизайн компонента была добавлена требуемый флаг:
+В данном решении компонент для настройки элемента управления реализован в `StaffPropertySettingsForm`. В дизайн компонента был добавлен требуемый флаг:
 
-image::usercontrol_layoutsdesigner_config.png[image]
+.Флаг "Скрывать неактивных сотрудников"
+image::hide-inactive.png[Флаг "Скрывать неактивных сотрудников"]
 
-В коде были переопределены методы для сохранения и получения значений собственной настройки:
-
+.В коде были переопределены методы для сохранения и получения значений собственной настройки:
 [source,csharp]
 ----
-// Загрузка значения
-protected override void LoadPropertyAttributes()
+protected override void LoadPropertyAttributes() <.>
 {
  base.LoadPropertyAttributes();
  if (this.PropertyItem != null)
@@ -263,8 +262,7 @@ protected override void LoadPropertyAttributes()
  }
 }
 
-// Сохранение значения
-protected override void UpdatePropertyAttributes()
+protected override void UpdatePropertyAttributes() <.>
 {
  base.UpdatePropertyAttributes();
  if (this.PropertyItem != null)
@@ -273,17 +271,19 @@ protected override void UpdatePropertyAttributes()
  }
 }
 ----
+<.> Загрузка значения.
+<.> Сохранение значения.
 
-Чтобы ограничить типы полей, которые могут выступать в качестве источника данных, в базовом классе предусмотрен метод IsSectionFieldSupported, который требуется переопределить, добавив логику проверки поля перед отображением в списке доступных полей:
+Чтобы ограничить типы полей, которые могут выступать в качестве источника данных, в базовом классе предусмотрен метод `IsSectionFieldSupported`. Этот метод требуется переопределить, добавив логику проверки поля перед отображением в списке доступных полей:
 
 [source,charp]
 ----
 protected override bool IsSectionFieldSupported(SectionField sectionField)
 {
- // Поддерживается только Справочник сотрудников -- секция Сотрудники
- return sectionField.LinkedCardTypeId = RefStaff.ID && sectionField.LinkedSectionId = RefStaff.Employees.ID;
+ return sectionField.LinkedCardTypeId = RefStaff.ID && sectionField.LinkedSectionId = RefStaff.Employees.ID; <.>
 }
 ----
+<.> Поддерживается только Справочник сотрудников -- секция Сотрудники.
 
 [NOTE]
 ====
@@ -292,9 +292,9 @@ protected override bool IsSectionFieldSupported(SectionField sectionField)
 
 == Свойства элемента управления
 
-Основной набор настроек элемента управления открывается после нажатия кнопки *Больше* в главном окне настроек. Чтобы добавить собственные настройки в данный список необходимо реализовать класс с базовым типом DocsVision.BackOffice.WinForms.Design.PropertyWrappers.SpecialPropertyWrapper<T>#, где T -- тип контейнера элемента управления.
+Основной набор настроек элемента управления открывается после нажатия кнопки *Больше* в главном окне настроек. Чтобы добавить собственные настройки в данный список необходимо реализовать класс с базовым типом `DocsVision.BackOffice.WinForms.Design.PropertyWrappers.SpecialPropertyWrapper<T>`, где `T` -- тип контейнера элемента управления.
 
-Для элемента управления _Сотрудник с фотографией_ данный компонент был реализован в классе StaffControlWrapper, в котором определены два свойства по требованиям к функциональности настройки элемента управления: возможность выбора подразделения и фильтра состояний.
+Для элемента управления _Сотрудник с фотографией_ данный компонент был реализован в классе `StaffControlWrapper`, в котором определены два свойства по требованиям к функциональности настройки элемента управления: возможность выбора подразделения и фильтра состояний.
 
 [source,charp]
 ----
@@ -328,11 +328,11 @@ public StaffEmployeeStatus? SelectedEmployeeStatus
 }
 ----
 
-Чтобы настройка попадала в собственную секцию настроек, а также имела нужное название, к свойствам должны быть добавлены атрибуты: Category, DisplayName и Description (дополнительная информация). Свойства передают или получают свои значения из контейнера элемента управления, который, в свою очередь, получает или передает значения в сам элемент управления.
+Чтобы настройка попадала в собственную секцию настроек, а также имела нужное название, к свойствам должны быть добавлены атрибуты: `Category`, `DisplayName` и `Description` (дополнительная информация). Свойства передают или получают свои значения из контейнера элемента управления, который, в свою очередь, получает или передает значения в сам элемент управления.
 
-Дополнительный атрибут TypeConverter указывает на необходимость предварительной обработки значения свойства перед его отображением (пример реализации см. в коде).
+Дополнительный атрибут `TypeConverter` указывает на необходимость предварительной обработки значения свойства перед его отображением (пример реализации см. в коде).
 
-Атрибут Editor позволяет указать собственный редактор для выбора значения свойства (пример реализации см. в коде).
+Атрибут `Editor` позволяет указать собственный редактор для выбора значения свойства (пример реализации см. в коде).
 
 [NOTE]
 ====
@@ -341,23 +341,30 @@ public StaffEmployeeStatus? SelectedEmployeeStatus
 
 == Регистрация компонента
 
-После разработки обязательных компонентов необходимо зарегистрировать сборку. Для этого:
+После разработки обязательных компонентов необходимо зарегистрировать сборку.
 
+.Чтобы зарегистрировать сборку:
 . В редакторе реестра откройте ветку:
-* HKEY_CURRENT_USER\Software\DocsVision\BackOffice\5.5\Client\PropertyControls -- для текущего пользователя;
++
+* `HKEY_CURRENT_USER\Software\DocsVision\BackOffice\5.5\Client\PropertyControls` -- для текущего пользователя.
 * {hklm}\Software\DocsVision\BackOffice\5.5\Client\PropertyControls -- для всех пользователей.
++
 . Добавьте новый строковый параметр с любым названием. В значении добавленного параметра должен быть указан путь к сборке компонента или строгое имя сборки:
++
 * Полный путь к сборке -- если сборка не зарегистрирована в GAC. Например: `C:\Users\KurkinSA\AppData\Local\Docsvision\5.5\Client\Docsvision.TreeControl.dll`.
 * Строгое имя сборки -- если сборка зарегистрирована в GAC. Например: `Docsvision.TreeControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=7148afe997f90519`.
 
-После того как компонент зарегистрирован, после повторного входа в {dv} {wincl} на панель инструментов будет представлен разработанный элемент управления:
+Когда компонент зарегистрирован, после повторного входа в {dv} {wincl} на панель инструментов будет представлен разработанный элемент управления:
 
-image::usercontrol_layoutsdesigner_controls.png[image]
+.Элемент управления "Сотрудник с фотографией" на панели инструментов
+image::user-with-photo.png[Элемент управления "Сотрудник с фотографией" на панели инструментов]
 
 Для нового элемента управления доступны все настройки, определённые начальными условиями:
 
-image::usercontrol_layoutsdesigner_control_config.png[image]
+.Настройки элемента управления "Сотрудник с фотографией"
+image::usercontrol_layoutsdesigner_control_config.png[Настройки элемента управления "Сотрудник с фотографией"]
 
 При работе с карточкой элемент управления _Сотрудник с фотографией_ выглядит так:
 
-image::usercontrol_card.png[image]
+."Сотрудник с фотографией" в карточке
+image::control-in-card.png["Сотрудник с фотографией" в карточке]
