--- a/modules/ROOT/pages/schemas/Release/TakeOffice/CardResolution.adoc
+++ b/modules/ROOT/pages/schemas/Release/TakeOffice/CardResolution.adoc
@@ -23,7 +23,7 @@
 |RegisteredBy |Регистратор |refid | |Поля ссылки: Register_FName > FirstName, Register_MName > MiddleName, Register_LName > LastName
 |SignedDate |Дата подписания |datetime | |
 |ControlledBy |Контролер |refid | |Поля ссылки: Control_FName > FirstName, Control_MName > MiddleName, Control_LName > LastName, Control_Email > Email
-|ControllerRoutingType |Тип маршрутизации для контролера |enum | |Значения: По умолчанию = 0, Письмо с вложениями = 1, Задача Outlook = 2, Ссылка на задание = 3, Оффлайн задание = 4, Онлайн задание = 5, Зашифрованное оффлайн = 6, Не маршрутизировать = 7, Особый = 8
+|ControllerRoutingType |Тип маршрутизации для контролера |enum | |Значения: По умолчанию = 0, Письмо с вложениями = 1, Задача Outlook = 2, Ссылка на задание = 3, Офлайн задание = 4, Онлайн задание = 5, Зашифрованное офлайн = 6, Не маршрутизировать = 7, Особый = 8
 |CreationDate |Дата создания |datetime | |
 |StartDate |Дата начала |datetime | |
 |ExpectedEndDate |Ожидаемая дата завершения |datetime | |
@@ -173,7 +173,7 @@
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
 |DelegateType |Тип делегата |enum | |Значения: Сотрудник = 0, Отдел = 1, Группа = 2, Роль = 3
 |DelegateID |Делегат |refid | |
-|RoutingType |Тип маршрутизации |enum | |Значения: По умолчанию = 0, Письмо с вложениями = 1, Задача Outlook = 2, Ссылка на задание = 3, Оффлайн задание = 4, Онлайн задание = 5, Зашифрованное оффлайн = 6, Не маршрутизировать = 7, Особый = 8
+|RoutingType |Тип маршрутизации |enum | |Значения: По умолчанию = 0, Письмо с вложениями = 1, Задача Outlook = 2, Ссылка на задание = 3, Офлайн задание = 4, Онлайн задание = 5, Зашифрованное офлайн = 6, Не маршрутизировать = 7, Особый = 8
 |===
 
 *Секция "Задания отдельных сотрудников группы"*
