Дальше по сэмплам. Примеры разработки решения.

--- a/modules/ROOT/pages/CreateInstaller_Client.adoc
+++ b/modules/ROOT/pages/CreateInstaller_Client.adoc
@@ -35,7 +35,7 @@
 При запуске {wincl}а автоматически подключаются библиотеки, расположенные в подкаталогах, указанных в узле `Applications` реестра.
 ====
 
-При создании пакета установки в качестве идентификатора продукта необходимо использовать _Код продукта_, который был использован в схеме библиотеки карточки на этапе xref:CreateCardLib_SchemaLib.adoc[разработки библиотеки карточки]:
+При создании пакета установки в качестве идентификатора продукта необходимо использовать _Код продукта_, который был использован в схеме библиотеки карточки на этапе xref:samples/solution/card-lib/lib-metadata-scheme.adoc[разработки библиотеки карточки]:
 
 [source,xml]
 ----
