--- a/modules/ROOT/pages/CreateSnapIn_Interface.adoc
+++ b/modules/ROOT/pages/CreateSnapIn_Interface.adoc
@@ -60,7 +60,7 @@ public object QueryInterface(SnapInInterfacesEnum itf)
 
 Данный интерфейс должен быть реализован, если расширение может выполнять первоначальную настройку _решения_.
 
-Как правило, метод Execute, при установке расширения вызываемый последним, регистрирует пакеты установки клиентской части, для чего указываются: путь к пакету установки, _Идентификатор пакета установки_ и _Код продукта_, которые были указаны при xref:CreateCardLib_SchemaLib.adoc[разработке библиотеки карточек]:
+Как правило, метод Execute, при установке расширения вызываемый последним, регистрирует пакеты установки клиентской части, для чего указываются: путь к пакету установки, _Идентификатор пакета установки_ и _Код продукта_, которые были указаны при xref:samples/solution/card-lib/lib-metadata-scheme.adoc[разработке библиотеки карточек]:
 
 [source,csharp]
 ----
