--- a/modules/ROOT/pages/UpdateSolution.adoc
+++ b/modules/ROOT/pages/UpdateSolution.adoc
@@ -20,10 +20,10 @@
 
 Для этого:
 
-. Увеличиваем номер версии библиотеки карточек в xref:CreateCardLib_SchemaLib.adoc[схеме метаданных библиотеки]:
+. Увеличиваем номер версии библиотеки карточек в xref:samples/solution/card-lib/lib-metadata-scheme.adoc[схеме метаданных библиотеки]:
 +
 image::CardManager4.png[image]
-. Изменяем номер версии библиотеки в xref:CreateCardLib_LibControl.adoc[компоненте библиотеки] (файл `dvver.h`) на номер, указанный в схеме метаданных:
+. Изменяем номер версии библиотеки в xref:samples/solution/card-lib/lib-component.adoc[компоненте библиотеки] (файл `dvver.h`) на номер, указанный в схеме метаданных:
 +
 [source,charp]
 ----
