--- a/modules/ROOT/pages/api/DocsVision/BackOffice/WinForms/BaseCardControl.ValidateProperties_2_MT.adoc
+++ b/modules/ROOT/pages/api/DocsVision/BackOffice/WinForms/BaseCardControl.ValidateProperties_2_MT.adoc
@@ -28,7 +28,7 @@ requiredFields:::
 notResolvedFields:::
 Тип: http://msdn.microsoft.com/ru-ru/library/9eekhta0.aspx[System.Collections.Generic.IEnumerable]<string>
 +
-Получает список свойств, которые из-за ошибки не могут быть связаны с данными карточки. Из списка исключаются свойства, перечисленные в `excludedProperties`. Данный параметр может сигнализировать, к примеру, о некорректно введенном значении в элемент управления типа *Сотрудник*.
+Получает список свойств, которые из-за ошибки не могут быть связаны с данными карточки. Из списка исключаются свойства, перечисленные в `excludedProperties`. Данный параметр может сигнализировать, к примеру, о некорректно введённом значении в элемент управления типа *Сотрудник*.
 notResolvedTables:::
 Тип: http://msdn.microsoft.com/ru-ru/library/9eekhta0.aspx[System.Collections.Generic.IEnumerable]<string>
 +
