--- a/modules/ROOT/pages/appendix/controls/obsolete/BoundChooseBox.adoc
+++ b/modules/ROOT/pages/appendix/controls/obsolete/BoundChooseBox.adoc
@@ -76,4 +76,4 @@ image::data-binding-algorithm.png[Алгоритм связывания данн
 == Методы
 
 * `System.Guid ChooseValue()` -- инициирует процесс выбора значения.
-* `QuickSearch()` -- инициирует быстрый поиск по введенному тексту.
+* `QuickSearch()` -- инициирует быстрый поиск по введённому тексту.
