--- a/modules/ROOT/pages/appendix/controls/obsolete/data-source/SessionSource.adoc
+++ b/modules/ROOT/pages/appendix/controls/obsolete/data-source/SessionSource.adoc
@@ -19,7 +19,7 @@ image::session-source-config-master.png[Мастер настройки Session 
 ** При разработке карточек, флаг должен быть *установлен*.
 ** При разработке внешних приложений и утилит, флаг должен быть *снят*.
 
-*Test connection* позволяет проверить правильность введенных данных (будет произведена попытка создания новой сессии с указанным сервером).
+*Test connection* позволяет проверить правильность введённых данных (будет произведена попытка создания новой сессии с указанным сервером).
 
 При нажатии на кнопку *Advanced*, откроется окно, позволяющее задать дополнительные настройки сессии (их также можно задать позже в окне свойств объекта `_SessionSource_`)
 
