--- a/modules/ROOT/pages/samples/solution/card-lib/new-lib.adoc
+++ b/modules/ROOT/pages/samples/solution/card-lib/new-lib.adoc
@@ -5,9 +5,8 @@
 Информация, приведенная в данном и последующих разделах, рассчитана на то, что разработчик знаком с принципами разработки новых библиотек карточек (см. раздел xref:solutions/cards/scheme/dev-cards-and-lib.adoc[Разработка карточек и библиотек карточек]).
 ====
 
-Разработка библиотеки карточек включает следующие шаги:
-
-. Получение файла с метаданными библиотеки карточек "NetstatSolution".
+.Разработка библиотеки карточек включает следующие шаги:
+. Получение файла с метаданными библиотеки карточек `NetstatSolution`.
 . Получение файла с метаданными карточки _учета сетевого оборудования_.
 . Разработка компонента карточки _учета сетевого оборудования_.
 . Разработка компонента библиотеки карточек.
@@ -15,9 +14,9 @@
 Помимо этого разработаем объектную модель карточки и сервис для работы с ней.
 
 .В данном разделе
-* xref:CreateCardLib_SchemaLib.adoc[Создание схемы метаданных библиотеки карточки]
-* xref:CreateCardLib_SchemaCard.adoc[Создание схемы метаданных карточки]
-* xref:CreateCardLib_CardObjectModel.adoc[Разработка объектной модели карточки]
-* xref:CreateCardLib_Services.adoc[Разработка сервиса для работы с карточкой]
-* xref:CreateCardLib_CardControl.adoc[Разработка компонента карточки]
-* xref:CreateCardLib_LibControl.adoc[Разработка компонента библиотеки карточек]
+* xref:samples/solution/card-lib/lib-metadata-scheme.adoc[Создание схемы метаданных библиотеки карточки]
+* xref:samples/solution/card-lib/card-metadata-scheme.adoc[Создание схемы метаданных карточки]
+* xref:samples/solution/card-lib/card-object-model.adoc[Разработка объектной модели карточки]
+* xref:samples/solution/card-lib/service.adoc[Разработка сервиса для работы с карточкой]
+* xref:samples/solution/card-lib/card-component.adoc[Разработка компонента карточки]
+* xref:samples/solution/card-lib/lib-component.adoc[Разработка компонента библиотеки карточек]
