--- a/modules/ROOT/pages/samples/wincl-nav-extension.adoc
+++ b/modules/ROOT/pages/samples/wincl-nav-extension.adoc
@@ -26,8 +26,7 @@ namespace DocsVision.Test.FolderTreeExtension
    }
   }
 
-  // Название расширения
-  protected override string GetExtensionName(NavExtensionTypes extensionType)
+  protected override string GetExtensionName(NavExtensionTypes extensionType) <.>
   {
    return "Расширение дерева папок {wincl}а";
    }
@@ -43,3 +42,4 @@ namespace DocsVision.Test.FolderTreeExtension
  }
 }
 ----
+<.> Название расширения.
