--- a/modules/ROOT/pages/samples/workflow-api/use-com-api.adoc
+++ b/modules/ROOT/pages/samples/workflow-api/use-com-api.adoc
@@ -2,18 +2,18 @@
 
 Ниже приведен пример запуска экземпляра бизнес процесса из кода Visual Basic с использованием используя COM API ObjectManager.
 
-[source,csharp]
+[source,vbnet]
 ----
 Public Sub StartProcess(ByVal oUserSession As DVObjectManager.UserSession, ByVal sProcessID As String)
- ' Получаем менеджер бизнес-процессов
  Dim oWorkflowManager As DVObjectManager.IWorkflowManager2
- Set oWorkflowManager = oUserSession.WorkflowManager
+ Set oWorkflowManager = oUserSession.WorkflowManager <.>
    
- ' Получаем объект для управления бизнес-процессом
  Dim oProcessInfo As DVObjectManager.ProcessInfo
- Set oProcessInfo = oWorkflowManager.GetProcess(sProcessID)
+ Set oProcessInfo = oWorkflowManager.GetProcess(sProcessID) <.>
    
- ' Запускаем бизнес-процесс
- oProcessInfo.Start
+ oProcessInfo.Start <.>
 End Sub
 ----
+<.> Получаем менеджер бизнес-процессов.
+<.> Получаем объект для управления бизнес-процессом.
+<.> Запускаем бизнес-процесс.
