--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -44,7 +44,7 @@
 *** xref:solutions/cards/scheme/dev-cards-and-lib.adoc[]
 **** xref:solutions/cards/scheme/dev-data-scheme.adoc[]
 ***** xref:solutions/cards/scheme/connect-db.adoc[]
-***** xref:solutions/cards/preapare-card-lib.adoc[]
+***** xref:solutions/cards/prepare-card-lib.adoc[]
 ***** xref:solutions/cards/scheme/create-edit-scheme.adoc[]
 ****** xref:solutions/cards/scheme/card-description.adoc[]
 ****** xref:solutions/cards/scheme/sections-description.adoc[]
@@ -321,26 +321,25 @@
 *** xref:samples/components/employee-control.adoc[]
 *** xref:samples/components/properties-page.adoc[]
 ** Примеры использования API Workflow
-*** xref:samples/workflow-api/SM_Workflow_1.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_2.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_3.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_4.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_5.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_6.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_7.adoc[]
-*** xref:samples/workflow-api/SM_Workflow_8.adoc[]
-** xref:CreateSolution.adoc[]
-*** xref:Intro.adoc[]
-*** xref:CreateCardLib.adoc[]
-**** xref:CreateCardLib_SchemaLib.adoc[]
-**** xref:CreateCardLib_SchemaCard.adoc[]
-**** xref:CreateCardLib_CardObjectModel.adoc[]
-***** xref:CreateCardLib_CardObjectModel_Row.adoc[]
-***** xref:CreateCardLib_CardObjectModel_Card.adoc[]
-***** xref:CreateCardLib_CardObjectModel_Mappers.adoc[]
-**** xref:CreateCardLib_Services.adoc[]
-**** xref:CreateCardLib_CardControl.adoc[]
-**** xref:CreateCardLib_LibControl.adoc[]
+*** xref:samples/workflow-api/get-user-name.adoc[]
+*** xref:samples/workflow-api/get-user-deputy.adoc[]
+*** xref:samples/workflow-api/get-card-url.adoc[]
+*** xref:samples/workflow-api/move-card-label.adoc[]
+*** xref:samples/workflow-api/delete-card-rights.adoc[]
+*** xref:samples/workflow-api/change-bp-state.adoc[]
+*** xref:samples/workflow-api/use-com-api.adoc[]
+*** xref:samples/workflow-api/unblock-subscription.adoc[]
+** xref:samples/solution/create-solution.adoc[]
+*** xref:samples/solution/card-lib/new-lib.adoc[]
+**** xref:samples/solution/card-lib/lib-metadata-scheme.adoc[]
+**** xref:samples/solution/card-lib/card-metadata-scheme.adoc[]
+**** xref:samples/solution/card-lib/card-object-model.adoc[]
+***** xref:samples/solution/card-lib/object-model-rows.adoc[]
+***** xref:samples/solution/card-lib/object-model-card.adoc[]
+***** xref:samples/solution/card-lib/mappers.adoc[]
+**** xref:samples/solution/card-lib/service.adoc[]
+**** xref:samples/solution/card-lib/card-component.adoc[]
+**** xref:samples/solution/card-lib/lib-component.adoc[]
 *** xref:CreatePackages.adoc[]
 *** xref:CreateSnapIn.adoc[]
 **** xref:CreateSnapIn_Interface.adoc[]
@@ -350,6 +349,7 @@
 **** xref:CreateInstaller_Server.adoc[]
 *** xref:UpdateSolution.adoc[]
 *** xref:License.adoc[]
+** xref:samples/wincl-nav-extension.adoc[]
 ** xref:DM_TM_Question.adoc[]
 * xref:api/Intro.adoc[]
 ** xref:api/DocsVision/DocsVision_NS.adoc[]
