--- a/modules/ROOT/pages/samples/workflow-api/get-card-url.adoc
+++ b/modules/ROOT/pages/samples/workflow-api/get-card-url.adoc
@@ -2,22 +2,19 @@
 
 Приведенный далее скрипт позволяет получить ссылку на заданную карточку в виде URL-строки.
 
-_Сценарий_ работает со следующими _переменными процесса_:
-
+.Сценарий работает со следующими переменными процесса:
 * `Card` -- карточка, для которой формируется ссылка. Тип "Карточка DV".
 * `URL` -- переменная будет использована для сохранения ссылки. Тип "Строка".
 
 [source,csharp]
 ----
-// подключение системных библиотек
 using System;
-using System.Xml;
+using System.Xml; <.>
 
-// подключение библиотек СУБП
 using DocsVision.Workflow.Objects;
 using DocsVision.Workflow.Runtime;
 using DocsVision.Workflow.Gates;
-using DocsVision.Platform.HelperAPI;
+using DocsVision.Platform.HelperAPI; <.>
 
 namespace DVScriptHost
 {
@@ -28,33 +25,35 @@ namespace DVScriptHost
    try
    {
 
-    // Получение переменных процесса
     ProcessVariable oURL = process.GetVariableByName("URL");
-    ProcessVariable oCard = process.GetVariableByName("Card");
+    ProcessVariable oCard = process.GetVariableByName("Card"); <.>
       
-    // Приведение переменной к типу "Карточка DV"
-    DVCard dvCard = oCard.Value as DVCard;
+    DVCard dvCard = oCard.Value as DVCard; <.>
         
-    // Приведение переменной к строковому типу
-    string strUrl = oURL.Value.ToString();
+    string strUrl = oURL.Value.ToString(); <.>
 
     DVGate dvGate = process.Gates[DVGate.GateID] as DVGate;
        
-    // Формирование строки URL
-    if (dvGate.BaseURL != null) 
+    if (dvGate.BaseURL != null)  <.>
     {
      strUrl += Environment.NewLine + "<" + dvGate.BaseURL + ((dvGate.BaseURL.IndexOf('?') > 0) ? "&" : "?") + "CardID=" + dvCard.ID + ">";
     }
                 
-    // Сохранение значения URL в переменную
-    oURL.Value = strUrl;
+    oURL.Value = strUrl; <.>
    } catch (Exception ex)
    {
   
-    // Добавление сообщения об ошибке в журнал процесса
-    process.LogMessage("Ошибка выполнения скрипта:" + ex.Message);
+    process.LogMessage("Ошибка выполнения скрипта:" + ex.Message); <.>
    }
   }
  }
 }
 ----
+<.> Подключение системных библиотек.
+<.> Подключение библиотек СУБП.
+<.> Получение переменных процесса.
+<.> Приведение переменной к типу "Карточка DV".
+<.> Приведение переменной к строковому типу.
+<.> Формирование строки URL.
+<.> Сохранение значения URL в переменную.
+<.> Добавление сообщения об ошибке в журнал процесса.
