--- a/modules/ROOT/pages/solutions/distribution.adoc
+++ b/modules/ROOT/pages/solutions/distribution.adoc
@@ -8,7 +8,7 @@
 
 [NOTE]
 ====
-Практический пример рассмотрен в Сборнике примеров (подразделе xref:CreateSolution.adoc[Пример разработки решения]).
+Практический пример рассмотрен в Сборнике примеров (подразделе xref:samples/solution/create-solution.adoc[Пример разработки решения]).
 ====
 
 .В данном разделе
